--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -47,7 +47,7 @@
       <div class="col-sm-12">
         <div class="accountlist">
           <ul>
-            <li>My account</li>
+            <li><a href="/myaccount" >My account</a></li>
             <li>Privacy policy</li>
             <li>Shipping to: Worldwide</li>
           </ul>
