--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -62,6 +62,7 @@ body {
         justify-content: center;
         color: white;
         padding-top: 10px;
+        margin: 0;
 
         #icon-link {
             text-align: end;
