--- a/scss/_detailProductPage.scss
+++ b/scss/_detailProductPage.scss
@@ -154,6 +154,8 @@
         
             
             .addToBagForm {
+                width: 100%;
+                padding: 0;
 
                 .size-container {
                     display: flex;
@@ -246,7 +248,7 @@
                 }
             }
             .description {
-                padding: 2% 10%;
+                padding: 2% 15%;
                 font-size: 0.6rem;
 
                 @include tablet {
@@ -259,7 +261,6 @@
             flex-direction: column;
             width: 100%;
             border-top: 1px solid rgb(225, 225, 225);
-            padding: 0 10px;
             background-color: white;
             position: sticky;
             position: -webkit-sticky;
@@ -297,12 +298,12 @@
     
             .buttons-about-bag-container {
                 display: flex;
-                justify-content: space-between;
+                justify-content: center;
                 width: 100%;
                 height: 60px;
                 
                 button {
-                    width: 48%;
+                    width: 90%;
                     height: 40px;
                     border-color: rgb(225, 225, 225);
                 }
