--- a/scss/_productPage.scss
+++ b/scss/_productPage.scss
@@ -47,6 +47,11 @@
                 text-align: center;
                 margin: 0 80px;
 
+                a {
+                    font-weight: 400;
+                    font-size: 0.9rem;
+                }
+
                 a:hover {
                     text-decoration: none;
                     font-weight: 500;
